tests/expectations/compiler/storage/modify_external_vec_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'async'
    --> compiler-test:4:5
     |
   4 |     async transition init() -> Future {
     |     ^^^^^
